@@ -39,6 +39,7 @@ examples/fixture_create_and_print_lexeme_wd_dog_czech_noun.pl
 examples/fixture_create_and_print_mediainfo_commons_imageofhuman.pl
 examples/fixture_create_and_print_mediainfo_snak_commons_depicts_human.pl
 examples/fixture_create_and_print_mediainfo_statement_commons_depicts_human.pl
+examples/fixture_create_and_print_property_wd_instance_of.pl
 examples/fixture_create_and_print_reference_wd_url.pl
 examples/fixture_create_and_print_reference_wd_viaf.pl
 examples/fixture_create_and_print_snak_wd_givenname_douglas.pl
