@@ -5,6 +5,8 @@
    Test::Shared::Fixture::Wikibase::Datatype::Lexeme::Wikidata::DogCzechNoun.
  - Add doc for
    Test::Shared::Fixture::Wikibase::Datatype::MediainfoSnak::Commons::Depicts::Human.
+ - Add doc for
+   Test::Shared::Fixture::Wikibase::Datatype::Property::Wikidata::InstanceOf.
  - Add SEE ALSO link to Wikibase::Datatype::Snak.
  - Fix output of example in Wikibase::Datatype::Languages doc.
 
